@@ -21,15 +21,17 @@
 package config
 
 import (
+	"github.com/elastic/beats/libbeat/autodiscover"
 	"github.com/elastic/beats/libbeat/common"
 )
 
 // Config defines the structure of heartbeat.yml.
 type Config struct {
 	// Modules is a list of module specific configuration data.
-	Monitors       []*common.Config `config:"monitors"`
-	ConfigMonitors *common.Config   `config:"config.monitors"`
-	Scheduler      Scheduler        `config:"scheduler"`
+	Monitors       []*common.Config     `config:"monitors"`
+	ConfigMonitors *common.Config       `config:"config.monitors"`
+	Scheduler      Scheduler            `config:"scheduler"`
+	Autodiscover   *autodiscover.Config `config:"autodiscover"`
 }
 
 // Scheduler defines the syntax of a heartbeat.yml scheduler block.
