@@ -26,20 +26,20 @@ import (
 	"github.com/elastic/beats/libbeat/common/bus"
 )
 
-// AutodiscoverAdapter for Metricbeat modules
-type AutodiscoverAdapter struct {
+// FactoryAdapter is an adapter that works with any cfgfile.RunnerFactory.
+type FactoryAdapter struct {
 	factory cfgfile.RunnerFactory
 }
 
-// NewAutodiscoverAdapter builds and returns an autodiscover adapter for Metricbeat modules
-func NewAutodiscoverAdapter(factory cfgfile.RunnerFactory) *AutodiscoverAdapter {
-	return &AutodiscoverAdapter{
+// NewFactoryAdapter builds and returns an autodiscover adapter that works with any cfgfile.RunnerFactory.
+func NewFactoryAdapter(factory cfgfile.RunnerFactory) *FactoryAdapter {
+	return &FactoryAdapter{
 		factory: factory,
 	}
 }
 
 // CreateConfig generates a valid list of configs from the given event, the received event will have all keys defined by `StartFilter`
-func (m *AutodiscoverAdapter) CreateConfig(e bus.Event) ([]*common.Config, error) {
+func (m *FactoryAdapter) CreateConfig(e bus.Event) ([]*common.Config, error) {
 	config, ok := e["config"].([]*common.Config)
 	if !ok {
 		return nil, errors.New("Got a wrong value in event `config` key")
@@ -48,16 +48,16 @@ func (m *AutodiscoverAdapter) CreateConfig(e bus.Event) ([]*common.Config, error
 }
 
 // CheckConfig tests given config to check if it will work or not, returns errors in case it won't work
-func (m *AutodiscoverAdapter) CheckConfig(c *common.Config) error {
+func (m *FactoryAdapter) CheckConfig(c *common.Config) error {
 	return m.factory.CheckConfig(c)
 }
 
 // Create a module or prospector from the given config
-func (m *AutodiscoverAdapter) Create(p beat.Pipeline, c *common.Config, meta *common.MapStrPointer) (cfgfile.Runner, error) {
+func (m *FactoryAdapter) Create(p beat.Pipeline, c *common.Config, meta *common.MapStrPointer) (cfgfile.Runner, error) {
 	return m.factory.Create(p, c, meta)
 }
 
 // EventFilter returns the bus filter to retrieve runner start/stop triggering events
-func (m *AutodiscoverAdapter) EventFilter() []string {
+func (m *FactoryAdapter) EventFilter() []string {
 	return []string{"config"}
 }
