@@ -10,6 +10,7 @@ import sys
 import time
 import yaml
 import hashlib
+import re
 from datetime import datetime, timedelta
 
 from .compose import ComposeMixin
@@ -21,6 +22,8 @@ BEAT_REQUIRED_FIELDS = ["@timestamp",
 INTEGRATION_TESTS = os.environ.get('INTEGRATION_TESTS', False)
 
 yaml_cache = {}
+
+REGEXP_TYPE = type(re.compile("t"))
 
 
 class TimeoutError(Exception):
@@ -359,6 +362,7 @@ class TestCase(unittest.TestCase, ComposeMixin):
         """
         Returns the number of appearances of the given string in the log file
         """
+        is_regexp = type(msg) == REGEXP_TYPE
 
         counter = 0
         if ignore_case:
@@ -371,6 +375,10 @@ class TestCase(unittest.TestCase, ComposeMixin):
         try:
             with open(os.path.join(self.working_dir, logfile), "r") as f:
                 for line in f:
+                    if is_regexp:
+                        if msg.search(line) is not None:
+                            counter = counter + 1
+                        continue
                     if ignore_case:
                         line = line.lower()
                     if line.find(msg) >= 0:
