@@ -114,6 +114,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 
 *Heartbeat*
 
+- Added autodiscovery support {pull}8415[8415]
+
 *Metricbeat*
 
 - Add `replstatus` metricset to MongoDB module {pull}7604[7604]
